--- a/src/styles/dashboard.module.css
+++ b/src/styles/dashboard.module.css
@@ -1,4 +1,34 @@
 .hero {
+    position: relative;
     height: 100vh;
-    background-color: purple;
+    margin: 0 3rem;
+    background-color: var(--secondary-bg-color);
+    overflow: hidden;
+}
+
+.textField {
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    /* background-color: var(--secondary-bg-color); */
+    width: 30rem;
+    padding: 0.5rem;
+    text-align: center;
+    transform: translateX(-50%);
+}
+
+.textField h2 {
+    margin-bottom: 0.75rem;
+}
+
+.textField p {
+    margin-bottom: 2rem;
+}
+
+.bgImg {
+    position: absolute;
+    left: 70%;
+    top: 20%;
+    max-width: 400px;
+    width: 40%;
 }
