--- a/src/styles/nav.module.css
+++ b/src/styles/nav.module.css
@@ -4,8 +4,9 @@ nav {
     align-items: center;
     padding: 0.5rem;
     font-size: var(--font-medium);
-    background-color: var(--secondary-bg-color);
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+    background-color: var(--main-bg-color);
+    /* background-color: var(--secondary-bg-color); */
+    /* box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1); */
 }
 
 .innerNav {
