--- a/src/styles/displayItem.module.css
+++ b/src/styles/displayItem.module.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     align-items: center;
     background-color: var(--secondary-bg-color);
-    box-shadow: 5px 5px 4px rgba(0,0,0,0.05);
+    box-shadow: 0px 0px 6px rgba(0,0,0,0.05);
 }
 .display {
     overflow: hidden;
@@ -44,7 +44,7 @@
 }
 
 .container:hover .displayImage {
-    transform: translate(-5%, -90%);
+    transform: translate(0, -90%) scale(1.1);
 }
 
 .displayTextReverse {
@@ -63,5 +63,5 @@
 }
 
 .container:hover .displayImageReverse {
-    transform: translate(5%, -30%);
+    transform: translate(0, -30%) scale(1.1);
 }
