Added responsive to dashboard component

--- a/src/styles/productDisplay.module.css
+++ b/src/styles/productDisplay.module.css
@@ -18,20 +18,20 @@
 .grid {
     width: 100%;
     display: grid;
-    justify-items: center;
+    justify-items: stretch;
     align-content: center;
     grid-template-columns: repeat(4, 1fr);
+    gap: 2rem;
 }
 
 
 @media only screen and (max-width: 1200px) {
     .grid {
         grid-template-columns: repeat(3, 1fr);
-        ;
     }
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 950px) {
     .grid {
         grid-template-columns: repeat(2, 1fr);
     }
