--- a/src/styles/dashboard.module.css
+++ b/src/styles/dashboard.module.css
@@ -1,9 +1,11 @@
 .hero {
     position: relative;
     height: 100vh;
-    margin: 0 3rem;
     background-color: var(--secondary-bg-color);
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .textField {
@@ -34,9 +36,47 @@
 }
 
 .twoItemDisplay {
-    margin: 2rem 1rem;
+    margin-top: 2rem;
+    margin-bottom: 3rem;
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 1rem;
     justify-items: center;
 }
+
+.heading {
+    margin-top: 4rem;
+    margin-bottom: 1rem;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: var(--font-large);
+    font-style: italic;
+}
+
+@media only screen and (max-width: 890px) {
+    .twoItemDisplay {
+        grid-template-columns: 1fr;
+        gap: 3rem;
+    }
+
+    .hero {
+        height: 95vh;
+    }
+
+    .textField {
+        top: auto;
+        left: auto;
+        width: auto;
+        transform: none;
+        margin: 2rem auto;
+    }
+
+    .bgImg {
+        top: 50%;
+        left: 50%;
+        transform: translateX(-50%);
+        height: 65%;
+        width: auto;
+    }
+}
+
