--- a/src/styles/displayItem.module.css
+++ b/src/styles/displayItem.module.css
@@ -5,63 +5,36 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: var(--secondary-bg-color);
-    box-shadow: 0px 0px 6px rgba(0,0,0,0.05);
+    box-shadow: 0px 0px 9px rgba(0,0,0,0.1);
 }
 .display {
-    overflow: hidden;
-    position: relative;
+    display: grid;
+    justify-content: space-between;
+    align-items: center;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
     width: 100%;
-    padding: 2rem;
-    height: 60vh;
 }
 
 .displayText {
-    position: absolute;
-    z-index: 2;
-    left: 0;
-    top: 58%;
-    transform: translate(0, 20%);
+    transform: scale(0.9);
     transition: all 400ms ease-in-out;
-    width: 30rem;
-    max-width: 50%;
+    text-align: center;
+}
+
+.displayText h2 {
+    margin-bottom: 1rem;
 }
 
 .displayImage {
-    position: absolute;
-    right: 0;
-    z-index: 1;
-    top: 50%;
-    transition: all 400ms ease-in-out;
-    transform: translate(0, -90%);
     object-fit: cover;
-    width: 60%;
-    height: 40%;
+    width: 100%;
 }
 
 .container:hover .displayText {
-    transform: translate(5%, 20%);
-}
-
-.container:hover .displayImage {
-    transform: translate(0, -90%) scale(1.1);
+    transform: scale(1);
 }
 
 .displayTextReverse {
-    left: 100%;
-    top: 10%;
-    transform: translate(-100%, 20%);
-}
-
-.displayImageReverse {
-    left: 0;
-    transform: translate(0, -30%);
-}
-
-.container:hover .displayTextReverse {
-    transform: translate(-110%, 20%);
-}
-
-.container:hover .displayImageReverse {
-    transform: translate(0, -30%) scale(1.1);
+    grid-row: 2;
 }
