--- a/src/styles/linkButton.module.css
+++ b/src/styles/linkButton.module.css
@@ -6,11 +6,12 @@
     font-size: var(--font-medium);
     font-weight: bold;
     cursor: pointer;
+    padding: 1rem;
 }
 
 .linkButton::after {
     position: absolute;
-    bottom: -3px;
+    bottom: 3px;
     left: 0;
     content: " ";
     width: 100%;
