--- a/src/styles/displayItem.module.css
+++ b/src/styles/displayItem.module.css
@@ -6,6 +6,8 @@
     flex-direction: column;
     align-items: center;
     box-shadow: 0px 0px 9px rgba(0,0,0,0.1);
+    opacity: 0;
+    transition: opacity 400ms ease-in-out;
 }
 .display {
     display: grid;
@@ -37,4 +39,8 @@
 
 .displayTextReverse {
     grid-row: 2;
+}
+
+.inView {
+    opacity: 1;
 }
