--- a/src/styles/nav.module.css
+++ b/src/styles/nav.module.css
@@ -1,4 +1,5 @@
 nav {
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -12,6 +13,9 @@ nav {
 }
 
 .logo {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
     font-style: italic;
     text-transform: uppercase;
     font-weight: bold;
