--- a/src/styles/productDisplay.module.css
+++ b/src/styles/productDisplay.module.css
@@ -16,6 +16,8 @@
 }
 
 .grid {
+    transition: all 600ms ease-in-out;
+    transform: translateX(-90%);
     width: 100%;
     display: grid;
     justify-items: stretch;
@@ -24,6 +26,9 @@
     gap: 2rem;
 }
 
+.inView {
+    transform: translateX(0) !important;
+}
 
 @media only screen and (max-width: 1200px) {
     .grid {
